=first demo virson

--- a/mine/drag_drop.html
+++ b/mine/drag_drop.html
@@ -29,23 +29,21 @@
 			<div class="window" id="window2">two<br/><br/><a href="#" class="cmdLink detach" rel="window2">detach all</a></div>
 			<div class="window" id="window3">three<br/><br/><a href="#" class="cmdLink detach" rel="window3">detach all</a></div>
 			<div class="window" id="window4">four<br/><br/><a href="#" class="cmdLink detach" rel="window4">detach all</a></div>			
-
 -->
 
 </head>
 <body>
 <div id = "buttom_column">
-	<div id="trigger" class="clonable draggable_clonable"><p>trigger</p></div>
-	<div id="data" class="clonable draggable_clonable"><p>data</p></div>
-	<div id="filter" class="clonable draggable_clonable"><p>filter</p></div>
-	<div id="action" class="clonable draggable_clonable"><p>action</p></div>
-	<div id="event" class="clonable draggable_clonable"><p>event</p></div>
+	<div id="trigger" class="clonable draggable_clonable" type="trigger"><p>trigger</p></div>
+	<div id="data" class="clonable draggable_clonable" type="data"><p>data</p></div>
+	<div id="filter" class="clonable draggable_clonable" type="filter"><p>filter</p></div>
+	<div id="action" class="clonable draggable_clonable" type="action"><p>action</p></div>
+	<div id="event" class="clonable draggable_clonable" type="event"><p>event</p></div>
 </div>
 
 <div id="main" class="droppable">
 <div id="list"></div>	
 </div>
-
 
 </body>
 </html>
