=convert to jquery plugin style

--- a/mine/drag_drop.html
+++ b/mine/drag_drop.html
@@ -9,27 +9,12 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 <script type="text/javascript" src="js/jquery.jsPlumb-1.4.0-all.js"></script>
 
-<script type="text/javascript" src="js/dragdrop.js"></script>
-
 <link rel="stylesheet" href="css/basic.css">
 <link rel="stylesheet" href="css/demo-all.css">
 <link rel="stylesheet" href="css/draggableConnectorsDemo.css">
 
-<script type="text/javascript" src="js/main.js"></script>
-<script type="text/javascript" src="js/helper.js"></script>
-
-
-<!-- 
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-
-<div class="window" id="window0">zero<br/><br/><a href="#" class="cmdLink hide" rel="window1">toggle connections</a><br/><a href="#" class="cmdLink drag" rel="window1">disable dragging</a><br/><a href="#" class="cmdLink detach" rel="window1">detach all</a></div>
-<div class="window" id = "window1"> one </div>			
-
-			<div class="window" id="window2">two<br/><br/><a href="#" class="cmdLink detach" rel="window2">detach all</a></div>
-			<div class="window" id="window3">three<br/><br/><a href="#" class="cmdLink detach" rel="window3">detach all</a></div>
-			<div class="window" id="window4">four<br/><br/><a href="#" class="cmdLink detach" rel="window4">detach all</a></div>			
--->
+<script type="text/javascript" src="js/dragdropHelper.js"></script>
+<script type="text/javascript" src="js/jsPlumbHelper.js"></script>
 
 </head>
 <body>
