--- a/mine/drag_drop.html
+++ b/mine/drag_drop.html
@@ -7,13 +7,19 @@
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script type="text/javascript" src="js/jquery.jsPlumb-1.4.0-all.js"></script>
-<script type="text/javascript" src="js/jquery.form.js"></script>
+
+<script type="text/javascript" src="external/jquery.jsPlumb-1.4.0-all.js"></script>
+<script type="text/javascript" src="external/jquery.form.js"></script>
+<script type="text/javascript" src="external/gentleSelect/jquery-gentleSelect.js"></script>
+<script type="text/javascript" src="external/cron/jquery-cron.js"></script>
+<script type="text/javascript" src="external/timeEntry/jquery.timeentry.min.js"></script>
 
 <link rel="stylesheet" href="css/basic.css">
 <link rel="stylesheet" href="css/demo-all.css">
 <link rel="stylesheet" href="css/draggableConnectorsDemo.css">
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
+<link type="text/css" href="external/gentleSelect/jquery-gentleSelect.css" rel="stylesheet" />
+<link type="text/css" href="external/cron/jquery-cron.css" rel="stylesheet" />
 
 <script type="text/javascript" src="js/dragdropHelper.js"></script>
 <script type="text/javascript" src="js/jsPlumbHelper.js"></script>
@@ -25,26 +31,26 @@
 <div class = "buttom_column">
 	<div class="buttom_row">
 		<b>Trigger</b>
-		<div id="trigger" class="clonable draggable_clonable" type="trigger" formId=""><p>trigger</p></div>
+		<div id="trigger" class="clonable draggable_clonable" type="trigger" formType="triggerDialog"><p>trigger</p></div>
 	</div>
 	<div class="buttom_row">
 		<b>Data</b>
-		<div id="data" class="clonable draggable_clonable" type="data" formId=""><p>data</p></div>
+		<div id="data" class="clonable draggable_clonable" type="data" formType="dataDialog"><p>data</p></div>
 	</div>
 	<div class="buttom_row">
 		<b>Filter</b>
-		<div id="filter" class="clonable draggable_clonable" type="filter" formId=""><p>filter</p></div>
+		<div id="filter" class="clonable draggable_clonable" type="filter" formType="filterDialog"><p>filter</p></div>
 	</div>
 	<div class="buttom_row">
 		<b>Action</b>
-		<div id="email" class="clonable draggable_clonable" type="action" formId="emailDialog"><p>email</p></div>
-		<div id="sms" class="clonable draggable_clonable" type="action" formId="smsDialog"><p>sms</p></div>
+		<div id="email" class="clonable draggable_clonable" type="action" formType="emailDialog"><p>email</p></div>
+		<div id="sms" class="clonable draggable_clonable" type="action" formType="smsDialog"><p>sms</p></div>
 	</div>
 	<div class="buttom_row" >
 		<b>Event</b>
-		<div id="emailopen" class="clonable draggable_clonable" type="event" formId="emailOpenDialog"><p>e-open</p></div>
-		<div id="emailclick" class="clonable draggable_clonable" type="event" formId="emailClickDialog"><p>e-click</p></div>
-		<div id="smsreceive" class="clonable draggable_clonable" type="event" formId="smsReceiveDialog"><p>s-receive</p></div>
+		<div id="emailopen" class="clonable draggable_clonable" type="event" formType="emailOpenDialog"><p>e-open</p></div>
+		<div id="emailclick" class="clonable draggable_clonable" type="event" formType="emailClickDialog"><p>e-click</p></div>
+		<div id="smsreceive" class="clonable draggable_clonable" type="event" formType="smsReceiveDialog"><p>s-receive</p></div>
 	</div>
 </div>
 
@@ -52,23 +58,72 @@
 <div id="list"></div>	
 </div>
 
-<div id="dialogContainer">
+<div id="dialogContainer" style="display: none;">
+
+	<div id="triggerDialog" title="Trigger">
+		<form>
+		<div id="selector">
+			<LABEL for="">Schedule: </LABEL>
+			<INPUT type="hidden" name="schedule" >
+		</div>
+		<br>
+		<b>OR</b>
+		<br>
+		<br>
+		<div>
+			<LABEL for="">Today at: </LABEL>
+			<input type="text" name="time">
+		</div>
+		</form>
+    </div>
+
+
+	<div id="dataDialog" title="Data Source">
+		<form>
+			<LABEL for="">Add Contacts: </LABEL>
+			<table border="0">
+				<tr>
+					<th>Name</th>
+					<th>Email</th>
+					<th>Mobile</th>
+				</tr>
+				<tr>
+					<td><INPUT type="text" name="name"></td>
+					<td><INPUT type="text" name="email"></td>
+					<td><INPUT type="text" name="mobile"></td>
+				</tr>
+				<tr style="display: none;">
+				</tr>
+			</table>
+		</form>
+	</div>
+
+
+	<div id="filterDialog" title="Filter">
+		<form>
+			<LABEL for="attribute">Customer Field: </LABEL> 
+			<select name="attribute">
+				<option value="name">Name</option>
+				<option value="email">Email</option>
+				<option value="mobile"">Mobile</option>
+			</select> <br> <LABEL for="regex">Matches: </LABEL> 
+				<INPUT type="text" name="regex">
+		</form>
+	</div>
 
 	<div id="emailDialog" title="Email">
 		<form>
-			<LABEL for="firstname">Content: </LABEL>
-				<INPUT type="text" id="content">
+			<LABEL for="content">Content: </LABEL>
+				<INPUT type="text" name="content">
 		</form>
 	</div>
 	
 	<div id="smsDialog" title="SMS">
 		<form>
-			<LABEL for="firstname">Content: </LABEL>
-				<INPUT type="text" id="content">
+			<LABEL for="content">Content: </LABEL>
+				<INPUT type="text" name="content">
 		</form>
 	</div>
-	
-
 
 	<div id="emailOpenDialog" title="Event: Email Open">
 		<form>
@@ -76,6 +131,7 @@
 			<select name="occurrence">
 				<option value="1">One</option>
 				<option value="2">Two</option>
+				<option value="3">Three</option>
 			</select>
 		</form>
 	</div>
@@ -86,6 +142,7 @@
 			<select name="occurrence">
 				<option value="1">One</option>
 				<option value="2">Two</option>
+				<option value="3">Three</option>
 			</select>
 		</form>
 	</div>
@@ -96,12 +153,11 @@
 			<select name="occurrence">
 				<option value="1">One</option>
 				<option value="2">Two</option>
+				<option value="3">Three</option>
 			</select>
 		</form>
 	</div>
 	
-	
-
 </div>
 
 </body>
